--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.1",
     "konva": "^10.0.2",
+    "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.14.0",
