--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva": "^19.0.10",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
